--- a/app/templates/quiz.modal.html
+++ b/app/templates/quiz.modal.html
@@ -7,12 +7,12 @@
 
 <!-- Quiz Loading Modal -->
 <div class="modal bga-dark" ng-show="!inProgress">
-  <div class="modal-box centered bg-dark">
+  <div class="modal-box centered bg-slate">
     <header>
       Loading..
     </header>
     <div>
-      <div id="quiz-load-prog-bar" class="bga-gray centered">
+      <div id="quiz-load-prog-bar" class="bga-light centered">
         <div id="quiz-load-prog-bar-thumb" class="bga-correct"></div>
       </div>
     </div>
