--- a/app/templates/words.userwords.modal.html
+++ b/app/templates/words.userwords.modal.html
@@ -7,7 +7,7 @@
 
 <!-- View Word Modal -->
 <div class="modal bga-dark" ng-show="words.viewWord && !words.editWord">
-  <div class="modal-box v-centered">
+  <div class="modal-box centered">
     <!-- Header: Prompt -->
     <header class="modal-header bg-slate">
       <div class="modal-header-icon ion-podium txt-theme"></div>
