--- a/app/templates/words.addword.modal.html
+++ b/app/templates/words.addword.modal.html
@@ -8,7 +8,7 @@
 <!-- Add Word Confirm Modal -->
 <div class="modal bga-dark"
   ng-show="words.pendingWordToAdd && !words.editWord">
-  <div class="modal-box v-centered">
+  <div class="modal-box centered">
     <!-- Header: Prompt -->
     <header class="modal-header bg-slate">
       <div class="modal-header-icon txt-theme"
