--- a/app/templates/words.editwordmodal.html
+++ b/app/templates/words.editwordmodal.html
@@ -8,7 +8,7 @@
 <!-- Edit Word Modal -->
 <div class="modal bga-dark"
   ng-show="words.editWord">
-  <div class="modal-box v-centered">
+  <div class="modal-box centered">
     <!-- Header: Prompt -->
     <header class="modal-header bg-slate">
       <div class="ion-edit modal-header-icon txt-theme"></div>
