Password reset email added

--- a/app/templates/landing.signup.html
+++ b/app/templates/landing.signup.html
@@ -7,7 +7,7 @@
 
 <form name="signUpForm" id="signup-form" class="input-form">
   <!-- Form Input -->
-  <section class="form-input bg-gray">
+  <section class="form-input bga-gray">
     <div class="input-content">
       <header class="logo-title">
         <div class="logo ion-university bg-theme"></div>
@@ -16,19 +16,19 @@
         <span class="ion-alert-circled txt-warning"></span> {{ inputError }}
       </div>
       <div ng-class="{'border-error': inputError}">
-        <input type="text" placeholder="display name" name="signUpDisplay" ng-model = "signUpUser.displayName" required>
+        <input type="text" class="border-round-top" placeholder="display name" name="signUpDisplay" ng-model = "signUpUser.displayName" required>
         <input type="email" placeholder="email address" name="signUpEmail" ng-model="signUpUser.email" required>
-        <input type="password" placeholder="password" name="signUpPassword" ng-model="signUpUser.password" required>
+        <input type="password" class="border-round-bottom" placeholder="password" name="signUpPassword" ng-model="signUpUser.password" required>
       </div>
     </div>
   </section>
   <!-- Form Submit -->
-  <section class="form-submit bg-dark">
+  <section class="form-submit bga-dark">
     <div class="btn-submit">
       <input type="submit" value="Sign Up"
         ng-click="landing.btnSignUp()"
         ng-disabled="!signUpForm.$valid"
-        ng-class="{'bg-theme': signUpForm.$valid, 'bg-gray': !signUpForm.$valid}">
+        ng-class="{'bg-theme active': signUpForm.$valid, 'bg-gray inactive': !signUpForm.$valid}">
     </div>
   </section>
 </form>
