--- a/app/styles/landing.css
+++ b/app/styles/landing.css
@@ -61,14 +61,6 @@
   position: relative;
 }
 
-/* log-in view, sign-up view
-  ========================================================================== */
-#landing-content #login-view,
-#landing-content #signup-view {
-  position: absolute;
-  left: 100%;
-}
-
 #landing-content .input-form {
   height: 100%;
 }
@@ -103,7 +95,7 @@
   font-size: 5rem;
   text-shadow: 2px 2px black;
   padding: 0 12px;
-  border-radius: 4px;
+  border-radius: 6px;
 }
 
 #landing-content input {
@@ -112,6 +104,7 @@
   width: 100%;
   height: 4rem;
   padding-left: 6px;
+  outline: none;
 }
 
 #landing-content .form-submit {
@@ -125,7 +118,15 @@
   color: white;
   font-size: 2rem;
   text-shadow: 1px 0 black;
-  border-radius: 4px;
+  border-radius: 12px;
+}
+
+#landing-content .active {
+  opacity: 1;
+}
+
+#landing-content .inactive {
+  opacity: 0.8;
 }
 
 #landing-content .btn-submit {
@@ -139,4 +140,79 @@
 
 #landing-content .border-error {
   border: 2px solid red;
+}
+
+#landing-content .border-round-top {
+  border-top-left-radius: 12px;
+  border-top-right-radius: 12px;
+}
+
+#landing-content .border-round-bottom {
+  border-bottom-left-radius: 12px;
+  border-bottom-right-radius: 12px;
+}
+
+
+/* log-in view, sign-up view
+  ========================================================================== */
+#landing-content #login-view,
+#landing-content #signup-view {
+  position: absolute;
+  left: 100%;
+}
+
+#landing-content #modal-forgot-password {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  z-index: 1;
+}
+
+#landing-content #modal-forgot-password #modal-header {
+  font-size: 1.5rem;
+  line-height: 3rem;
+  height: 3rem;
+}
+
+#landing-content #reset-instructions {
+  font-size: 80%;
+  padding: 12px;
+}
+
+#landing-content #modal-body {
+  padding: 12px 24px;
+}
+
+#landing-content #modal-body input {
+  border-radius: 12px;
+}
+
+#landing-content #modal-footer {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  height: 3rem;
+  font-size: 1.5rem;
+}
+
+#landing-content #modal-footer button {
+  font-size: 1.5rem;
+  line-height: 3rem;
+  border: none;
+}
+
+#login-view #forgot-email {
+  margin: 12px;
+  text-align: center;
+}
+
+/* MEDIA QUERIES
+  ========================================================================== */
+
+/*
+  screen width > 768px (tablet, laptop, etc.)
+*/
+@media only screen and (min-width: 768px) {
+  #landing-content #modal-box {
+    width: 60%;
+  }
 }
