--- a/app/templates/landing.login.html
+++ b/app/templates/landing.login.html
@@ -7,7 +7,7 @@
 
 <form name="logInForm" id="login-form" class="input-form">
   <!-- Form Input -->
-  <section class="form-input bg-dark">
+  <section class="form-input bga-dark">
     <div class="input-content">
       <header class="logo-title">
         <div class="logo ion-university bg-theme"></div>
@@ -16,18 +16,21 @@
         <span class="ion-alert-circled txt-warning"></span> {{ inputError }}
       </div>
       <div ng-class="{'border-error': inputError}">
-        <input type="email" placeholder="email address" name="logInEmail" ng-model="logInUser.email" required>
-        <input type="password" placeholder="password" name="logInPassword" ng-model="logInUser.password" required>
+        <input type="email" class="border-round-top" placeholder="email address" name="logInEmail" ng-model="logInUser.email" required>
+        <input type="password" class="border-round-bottom" placeholder="password" name="logInPassword" ng-model="logInUser.password" required>
+      </div>
+      <div id="forgot-email" ng-click="landing.btnOpenForgotPasswordModal()">
+        Forgot your password?
       </div>
     </div>
   </section>
   <!-- Form Submit -->
-  <section class="form-submit bg-gray">
+  <section class="form-submit bga-slate">
     <div class="btn-submit">
       <input type="submit" value="Log In"
         ng-click="landing.btnLogIn()"
         ng-disabled="!logInForm.$valid"
-        ng-class="{'bg-theme': logInForm.$valid, 'bg-dark': !logInForm.$valid}">
+        ng-class="{'bg-theme active': logInForm.$valid, 'bg-gray inactive': !logInForm.$valid}">
     </div>
   </section>
 </form>
