Removed unnecessary lag in the app by removing unnecessary loading in Words and implementing quiz loading in the background

--- a/app/styles/landing.css
+++ b/app/styles/landing.css
@@ -194,6 +194,13 @@
   font-size: 1.5rem;
 }
 
+#landing-content #modal-footer.success {
+  display: grid;
+  grid-template-columns: 1fr;
+  height: 3rem;
+  font-size: 1.5rem;
+}
+
 #landing-content #modal-footer button {
   font-size: 1.5rem;
   line-height: 3rem;
