--- a/app/templates/mainnav.html
+++ b/app/templates/mainnav.html
@@ -48,7 +48,7 @@
   <!-- Btn: Quiz -->
   <div class="main-nav-item btn bg-slate" ng-click="nav.btnGoToQuiz()" ng-class="{'bga-light-desktop': nav.currentStateIs('quiz')}">
     <!-- Main Nav Item Content: Mobile -->
-    <div class="ion-flash centered mobile" ng-class="{'txt-theme': nav.currentStateIs('quiz')}">
+    <div class="ion-university centered mobile" ng-class="{'txt-theme': nav.currentStateIs('quiz')}">
     </div>
     <!-- Main Nav Item Content: Desktop -->
     <div class="desktop">
