--- a/app/templates/words.editwordmodal.html
+++ b/app/templates/words.editwordmodal.html
@@ -7,8 +7,9 @@
 
 <!-- Edit Word Modal -->
 <div class="modal bga-dark"
-  ng-show="words.editWord">
-  <div class="modal-box centered">
+  ng-show="words.editWord"
+  ng-click="words.btnCloseEditWordModal()">
+  <div class="modal-box centered" onclick="event.stopPropagation();">
     <!-- Header: Prompt -->
     <header class="modal-header bg-slate">
       <div class="ion-edit modal-header-icon txt-theme"></div>
