--- a/app/templates/words.userwords.html
+++ b/app/templates/words.userwords.html
@@ -47,7 +47,7 @@
   <div id="user-words-box" class="list-box">
     <ul class="word-list">
       <!-- List Item: User Word -->
-      <li class="word-item bga-gray" ng-repeat="word in words.userWords | filter: words.searchUserWord | orderBy: words.sortByOrder():words.sortByReversed() as filteredSearch">
+      <li class="word-item bga-gray" ng-repeat="word in words.userWords.words | filter: words.searchUserWord | orderBy: words.sortByOrder():words.sortByReversed() as filteredSearch">
         <!-- Word Metrics Bar -->
         <div class="word-metrics bga-dark">
           <!-- Metric: Search Word -->
