--- a/app/templates/landing.html
+++ b/app/templates/landing.html
@@ -7,7 +7,7 @@
 
 <main id="landing-content">
   <!-- Forgot Email Modal -->
-  <ng-include src="'/templates/landing.passwordreset.html'"></ng-include>
+  <ng-include src="'/templates/landing.passwordresetmodal.html'"></ng-include>
   <div class="overlay bga-gray"></div>
   <!-- Welcome -->
   <section id="welcome-view" class="sliding-content">
