--- a/app/templates/landing.passwordresetmodal.html
+++ b/app/templates/landing.passwordresetmodal.html
@@ -2,7 +2,7 @@
   scholarly
     app
       templates
-        * landing.passwordreset.html
+        * landing.passwordresetmodal.html
 -->
 
 <form id="modal-forgot-password" name="forgotPassword" class="bga-gray"
@@ -27,9 +27,8 @@
         ng-show="!landing.forgotPasswordSuccess">
         <div class="ion-email"></div>
       </button>
-      <div ng-click="landing.btnCloseForgotPasswordModal()"
-        ng-class="{'bg-dark': !landing.forgotPasswordSuccess, 'bg-theme': landing.forgotPasswordSuccess}">
-        <div class="centered" ng-class="{'ion-close-round': !landing.forgotPasswordSuccess, 'ion-checkmark-round': landing.forgotPasswordSuccess}"></div>
+      <div class="bg-slate" ng-click="landing.btnCloseForgotPasswordModal()">
+        <div class="centered" ng-class="{'ion-close-round': !landing.forgotPasswordSuccess, 'ion-checkmark-round txt-theme': landing.forgotPasswordSuccess}"></div>
       </div>
     </footer>
   </div>
