--- a/app/templates/landing.login.html
+++ b/app/templates/landing.login.html
@@ -16,8 +16,8 @@
         <span class="ion-alert-circled txt-warning"></span> {{ landing.inputError }}
       </div>
       <div ng-class="{'border-error': inputError}">
-        <input type="email" class="border-round-top" placeholder="email address" name="logInEmail" ng-model="landing.logInUser.email" required>
-        <input type="password" class="border-round-bottom" placeholder="password" name="logInPassword" ng-model="landing.logInUser.password" required>
+        <input type="email" id="input-log-in-email" class="border-round-top" placeholder="email address" name="logInEmail" ng-model="landing.logInUser.email" required>
+        <input type="password" id="input-log-in-password" class="border-round-bottom" placeholder="password" name="logInPassword" ng-model="landing.logInUser.password" required>
       </div>
       <div id="forgot-email" ng-click="landing.btnOpenForgotPasswordModal()">
         Forgot your password?
