Adjusted word search bars to better fit with main header

--- a/app/templates/mainnav.html
+++ b/app/templates/mainnav.html
@@ -33,7 +33,7 @@
   </div>
 
   <!-- (Desktop) Main Nav Header -->
-  <header id="main-nav-header" class="bg-slate">
+  <header id="main-nav-header" class="bg-darker">
     <div class="ion-university txt-theme centered"></div>
   </header>
   <!-- Btn: Words -->
