Added 'loading your words' message in 'Words', added search from userwords search bar on form submit

--- a/app/styles/landing.css
+++ b/app/styles/landing.css
@@ -222,4 +222,12 @@
   #landing-content #modal-box {
     width: 60%;
   }
+
+  #landing-content .input-content {
+    padding: 0 20%;
+  }
+
+  #landing-content .btn-submit {
+    padding: 0 20%;
+  }
 }
